--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ min-height: 100vh;
     position: relative;
     background: #fff;
     padding: 40px;
+    min-width: 900px;
 }
 .profileText{
     position: relative;
@@ -61,6 +62,16 @@ min-height: 100vh;
     border-bottom: 1px solid rgba(255, 255, 255,0.2);
 
 }
+
+.bolde{
+    
+    font-size: 13mm;
+    margin-top: 20px;
+    text-transform: uppercase;
+    
+    font-weight: 600;
+    line-height: 1.4mm;
+}
 .profileText1 h3{
     color: #538cc6;
     font-size: 6mm;
@@ -70,6 +81,12 @@ min-height: 100vh;
     font-weight: 600;
     line-height: 1.4mm;
 
+}
+.profileText2 h3{
+    padding-bottom: 10px;
+    white-space: normal;
+    text-transform: uppercase;
+    border-bottom: 3px solid rgba(83, 140, 198,0.6);
 }
 address { 
     display: block;
