--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@
     margin-left: auto;
     margin-right: auto;
   }
+  .space {
+    width: 100px;
+    height: auto;
+    display: inline-block;
+  }
 .bodys
 {
 background: lightblue;
@@ -27,7 +32,12 @@ justify-content: center;
 align-items: center;
 min-height: 100vh;
 }
-
+.rightali{
+    justify-content:right;
+    padding-bottom: 40px;
+ 
+    text-align: right;
+}
 .containerr{
     position: relative;
     width: 100%;
